# rcli

./: Cargo.toml  README.md  test.rest
fixtures/: b64.txt  ed25519.pk  ed25519.sk
src/: lib.rs  main.rs  opts.rs  process.rs  utils.rs
src/cli/: base64.rs  csv.rs  genpass.rs  http_cli.rs  mod.rs  text.rs
src/process/: b64.rs  csv_convert.rs  gen_pass.rs  http_serve.rs  mod.rs  text.rs
