[package]
name = "rcli"
version = "0.1.0"
edition = "2021"
authors = ["ffssea <bugducky@outlook.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.19", features = ["derive"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_yaml = "0.9"
csv = "1.3.0"
anyhow = "1.0.89"
toml = "0.8.19"
rand = "0.8.5"
zxcvbn = "3.1.0"
